# trade_analyzer

./: .gitignore  ACTIVITIES_DOCUMENTATION.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: implementation_plan.md  trade_analyzer_documentation.md
src/trade_analyzer/: config.py  main.py
src/trade_analyzer/activities/: __init__.py  consistency.py  execution.py  fundamental.py  momentum.py  portfolio_construction.py  recommendation.py  risk_geometry.py  setup_detection.py  universe.py  universe_setup.py  volume_liquidity.py
src/trade_analyzer/data/: __init__.py
src/trade_analyzer/data/providers/: __init__.py  fundamental.py  market_data.py  nse.py  nse_holdings.py  upstox.py
src/trade_analyzer/db/: __init__.py  connection.py  models.py  repositories.py
src/trade_analyzer/templates/: __init__.py  trade_setup.py
src/trade_analyzer/ui/: __init__.py  app.py
src/trade_analyzer/workers/: __init__.py  client.py  start_workflow.py  universe_worker.py
src/trade_analyzer/workflows/: __init__.py  consistency_filter.py  execution.py  fundamental_filter.py  momentum_filter.py  portfolio_construction.py  risk_geometry.py  setup_detection.py  universe.py  universe_setup.py  volume_filter.py  weekly_recommendation.py
tests/: test_main.py
