[project]
name = "trade-analyzer"
version = "0.1.0"
description = "Institutional-Grade Weekly Trading Algorithm for NSE"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "jaswanth", email = "jaswanthreddy77@gmail.com" },
]
maintainers = [
    { name = "jaswanth", email = "jaswanthreddy77@gmail.com" }
]
dependencies = [
    "upstox-python-sdk>=2.19.0",
]

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
Issues = ""

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ty",
    "twine",
    "build",
    "pre-commit",
    "rich",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
trade_analyzer = "trade_analyzer.main:hello_world"

[tool.ruff]
target-version = "py313"

[tool.coverage.run]
omit = ["tests/*"]
